script/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: micro-framework
    labels:
        app: micro-framework  # 为所有 Pod 都打上这个标签
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: micro-framework  # 为所有 Pod 都打上这个标签
        spec:
            containers:
                - name: micro
                  lifecycle:
                      preStop:
                        exec:
                          command: ["/bin/sh", "-c", "sh script/pre_stop.sh"]
                  image: micro-framework
                  imagePullPolicy: Never
                  command: [ "/bin/sh", "-c", "sh  script/start.sh" ]
                  ports:
                    - containerPort: 10000
                      name: grpc
                  volumeMounts:
                    - name: config-volume
                      mountPath: /etc/config
                    - name: go-logs
                      mountPath: /tmp
            volumes:
                - name: config-volume
                  configMap:
                    name: micro-config 
                    items:
                        - key: config.toml
                          path: config.toml
                - name: go-logs
                  hostPath:
                    path: /tmp/log/
            restartPolicy: Always
