script/etcd-client-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-client-service-lb
  namespace: default
spec:
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  selector:
    etcd_cluster: etcd-cluster
  type: LoadBalancer
